פטה טבעוני, תבשיל ירקות והצוות

--- a/index.html
+++ b/index.html
@@ -557,6 +557,8 @@ Error message and password prompt
 
 <li>הספרית</li>
 
+<li>הצוות</li>
+
 <li>הקוסקוס</li>
 
 <li>הקליניקה</li>
@@ -937,6 +939,8 @@ Error message and password prompt
 
 <li>פחזניות ממולאות בכבד קצוץ</li>
 
+<li>פטה טבעוני</li>
+
 <li>פיליפ</li>
 
 <li>פיליפ סימור הופמן</li>
@@ -1020,6 +1024,8 @@ Error message and password prompt
 <li>שרלה הייתה אוהבת את זה</li>
 
 <li>שרלה לא הייתה אוהבת את זה</li>
+
+<li>תבשיל ירקות</li>
 
 <li>תבשיל שורשים ואורז בשלושה צבעים</li>
 
@@ -8880,10 +8886,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180213183313016" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20180315180328264" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20180307182314536" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180315195456393" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8892,7 +8898,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[על הספקטרום]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פטה טבעוני]] [[תבשיל ירקות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8912,7 +8918,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180313101726516" title="$:/temp/search">
+<div created="20161023184814872" modified="20180315165956188" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9915,10 +9921,10 @@ well,
 
 </pre>
 </div>
-<div created="20180130191838651" modified="20180208153347276" tags="" title="אמהות">
+<div created="20180130191838651" modified="20180315165941162" tags="הצוות" title="אמהות">
 <pre>[img[pictures/imahot.jpg]]
 
-!!![[גורה]]:
+
 
  אמהות זה משהו
 
@@ -11812,6 +11818,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
+<div created="20180315162507739" modified="20180315185500758" tags="[[אחות כהן]]" title="הצוות">
+<pre>[img[pictures/hazevet.jpg]]
+
+הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]], כלומר יויו, אירי וגורה, שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
+
+
+&lt;&lt;list-links filter:&quot;[tag[הצוות]]&quot;&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20161213170938039" modified="20170517235841154" title="הקוסקוס">
 <pre>[img[pictures/hacouscous.jpg]]
 
@@ -12831,12 +12848,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180101172047473" modified="20180128175038946" tags="[[חיות אוכל]] ארוחות" title="כריסמס 2017">
+<div created="20180101172047473" modified="20180315105751389" tags="[[חיות אוכל]] ארוחות" title="כריסמס 2017">
 <pre>[img[pictures/christmas-2017.jpg]]
 
 !!![[גורה]]:
 
-לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב [[אצלנו|כוכב המשאלות 01]] את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה פטה כבד ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, [[חמאת שום|חמאת שום ועשבי תיבול]], פטה טבעוני, אורז לבן, כרובית בטורטיות, תבשיל ירקות, סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
+לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב [[אצלנו|כוכב המשאלות 01]] את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה פטה כבד ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, [[חמאת שום|חמאת שום ועשבי תיבול]], [[פטה טבעוני]], אורז לבן, כרובית בטורטיות, [[תבשיל ירקות]], סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
 
 זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], [[יויו]] סיפר לנו שהתרחשה [[תהפוכת]], והוא [[ואנג'ליק|אנג'ליק]] התאחדו. כולנו שמחנו למרות שכולנו די כבר שמנו לב.</pre>
 </div>
@@ -13114,7 +13131,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אדל תומפסון היא אישה מקסימה ונפלאה. היא קרמיקאית, והיא מכינה כלים מאד יפים ונעימים למגע ולאכילה.</pre>
 </div>
-<div created="20180302154738562" modified="20180307182224545" tags="לילי" title="לילי 15">
+<div created="20180302154738562" modified="20180314121400935" tags="לילי" title="לילי 15">
 <pre>[img[pictures/lily-15.jpg]]
 
 שבועיים אחרי הגיעו הורי הביולוגים לאיסלנד זועמים על אדל. סוקי החתול שלנו היה בהיכון על הפסנתר כשעצרתי אותם, ביקשתי מהם לשבת על הספה הזוגית בסלון ביתנו, ואמרתי להם שכתוב [[באמנת זכויות הילד|https://he.wikipedia.org/wiki/%D7%90%D7%9E%D7%A0%D7%AA_%D7%96%D7%9B%D7%95%D7%99%D7%95%D7%AA_%D7%94%D7%99%D7%9C%D7%93]] שעליהם להקשיב לחוות דעתי.</pre>
@@ -13694,7 +13711,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180107120555995" modified="20180128160347609" tags="[[חיות אוכל]] ארוחות" title="מתכונים טבעוניים">
+<div created="20180107120555995" modified="20180315165642291" tags="[[חיות אוכל]] ארוחות הצוות" title="מתכונים טבעוניים">
 <pre>[img[pictures/vegan.jpg]]
 
 חיות המשק המומות לטובה
@@ -15029,6 +15046,33 @@ __אופן ההכנה____
 
 </pre>
 </div>
+<div created="20180314180839992" modified="20180316102740248" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות" title="פטה טבעוני">
+<pre>[img[pictures/vegan-pate.jpg]]
+
+
+
+החומרים:
+
+1. כוס עדשים שחורות מבושלות עד ריכוך
+
+2. כוס אגוזי מלך מושרים במים לשעה-שעתיים
+
+3. בצל קצוץ מוזהב במעט שמן קנולה ושמן שומשום
+
+4. מלח ים ופלפל שחור גרוס
+
+אופן ההכנה:
+
+1. מסננים את העדשים המבושלות ואת האגוזים המושרים
+
+2. מכניסים למעבד מזון את העדשים, האגוזים והבצל וטוחנים בפולסים עד משחה חלקה
+
+3. טועמים ומוסיפים לפי הטעם מלח ים, פלפל שחור גרוס.
+(אם חסרים לכם טעמים אפשר להוסיף עוד טיפה או שתיים משמן השומשום)
+
+
+4. מרפדים תבנית אינגליש קייק בניילון נצמד, יוצקים לתוכה את המשחה, וממשיכים לעטוף היטב עם הניילון הנצמד. מאפסנים במקרר לכמה שעות (6-8) עד להגשה.</pre>
+</div>
 <div created="20170401151233604" modified="20170528151211923" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
 
@@ -15319,7 +15363,7 @@ Fapina''
 
 7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
-<div created="20170817155826253" modified="20180209104558460" tags="סדרות" title="קופים ממונעים">
+<div created="20170817155826253" modified="20180315162741420" tags="סדרות" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 !!![[יויו]]: 
@@ -16047,6 +16091,46 @@ Fapina''
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, [[אדם צועק את שחסר לו|https://www.youtube.com/watch?v=DGNRX_o0AGA]]
 
 &lt;&lt;list-links filter:&quot;[tag[שרלה לא הייתה אוהבת את זה]]&quot;&gt;&gt;</pre>
+</div>
+<div created="20180315105819806" modified="20180315201729519" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] [[חיות אוכל]] הצוות" title="תבשיל ירקות">
+<pre>[img[pictures/tavshil-yerakot.jpg]]
+
+
+החומרים:
+
+1. בצל קצוץ
+
+2. שמונה עגבניות בינוניות חתוכות קטן
+
+3. פלפל אדום חתוך לקוביות
+
+4. גזר חתוך לקוביות
+
+5. כוס עדשים שחורות
+
+6. כוס עדשים ירוקות
+
+אופן ההכנה:
+
+1. מחממים סיר רחב יחסית (28) ומוסיפים שמן זית ואת הבצל הקצוץ ומזהיבים
+
+2. מוסיפים את קוביות הגזר וצולים עד שהן &quot;מזהיבות&quot;
+
+3. מוסיפים את הפלפלים וכנ&quot;ל
+
+4. מוסיפים את העגבניות וצולים היטב עד שאוזלים הנוזלים כליל
+
+5. מוסיפים ליטר אחד של מים וממשיכים לבשל על אש קטנה כשעה
+
+6. מוסיפים מעט מלח, פלפל שחור וקומץ סוכר
+
+7. מוסיפים את הקטניות ומבשלים עוד כשעה תוך ערבוב
+
+8. במהלך הבישול כדאי מידי פעם לערבב ולבדוק את התיבול
+
+
+
+</pre>
 </div>
 <div created="20170408234445334" modified="20180107121956676" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="תבשיל שורשים ואורז בשלושה צבעים">
 <pre>[img[pictures/orez-bishlosha.jpg]]
