--- a/index.html
+++ b/index.html
@@ -941,6 +941,8 @@ Error message and password prompt
 
 <li>פטה טבעוני</li>
 
+<li>פטה כבד עוף</li>
+
 <li>פיליפ</li>
 
 <li>פיליפ סימור הופמן</li>
@@ -8886,10 +8888,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180315180328264" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180316181342104" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20180315195456393" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180316181824179" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8898,7 +8900,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פטה טבעוני]] [[תבשיל ירקות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8918,7 +8920,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180315165956188" title="$:/temp/search">
+<div created="20161023184814872" modified="20180316181821217" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9682,10 +9684,12 @@ well,
 בקיץ זו לא הייתה בעיה, וגם היו לי אופניים, אבל בחורף תמיד [[חלמתי|דעתניות]] שיש לי אוטו-תלת אופן, עם כיסוי בצורת מטריה ענקית שקופה.
 </pre>
 </div>
-<div created="20170402173414658" modified="20180107121520116" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="אורז לבן עם צנוברים">
+<div created="20170402173414658" modified="20180316114230362" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="אורז לבן עם צנוברים">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
 
 !!![[גורה]]:
+
+//ראשית זה בעצם גם המתכון לאורז לבן - רק שאם רוצים אורז לבן לא מוסיפים את הצנוברים :)//
 
 בסיר של שני ליטרים שמים, כף שמן צמחי וכוס אורז, ומטגנים אותו מעט מעל להבה בינונית.
  
@@ -10164,11 +10168,11 @@ well,
 
 דןדן</pre>
 </div>
-<div created="20170425194155286" modified="20170929100621282" tags="[[קופים ממונעים]]" title="בחוות החיות">
+<div created="20170425194155286" modified="20180316181504318" tags="[[קופים ממונעים]] הצוות" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
-!!![[גורה]]:
+
 
 !!''[[מאד מאד כייף וגם|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%95%D7%AA_%D7%94%D7%97%D7%99%D7%95%D7%AA]]''
 
@@ -11818,10 +11822,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20180315162507739" modified="20180315185500758" tags="[[אחות כהן]]" title="הצוות">
+<div created="20180315162507739" modified="20180316153634441" tags="[[אחות כהן]]" title="הצוות">
 <pre>[img[pictures/hazevet.jpg]]
 
-הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]], כלומר יויו, אירי וגורה, שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
+הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]] מחודשת החוזה שכירות, כלומר [[יויו]], [[אירי]] [[וגורה|גורה]], שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
 
 
 &lt;&lt;list-links filter:&quot;[tag[הצוות]]&quot;&gt;&gt;
@@ -11964,7 +11968,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא גם טוענת, [[שדיוויד בואי|דיוויד בואי]] הוא דוגמה טובה לזקוף גו וגם [[פה]].</pre>
 </div>
-<div created="20180221193850741" modified="20180221193918460" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
+<div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
 <div created="20170515195747350" modified="20170517235122386" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
@@ -12031,7 +12035,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[חיות אוכל]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170422183732891" modified="20170729203311901" title="חלומות שחלמנו">
+<div created="20170422183732891" modified="20180316181741021" tags="הצוות" title="חלומות שחלמנו">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
 !!![[יויו]]:
@@ -12169,7 +12173,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170514194133105" modified="20170729112700373" tags="[[בחוות החיות]] [[שרלה לא הייתה אוהבת את זה]]" title="יד ימין אינה יודעת">
+<div created="20170514194133105" modified="20180316181438223" tags="[[בחוות החיות]] [[שרלה לא הייתה אוהבת את זה]]" title="יד ימין אינה יודעת">
 <pre>[img[pictures/yad-yamin.jpg]]
 
 
@@ -12848,14 +12852,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180101172047473" modified="20180315105751389" tags="[[חיות אוכל]] ארוחות" title="כריסמס 2017">
+<div created="20180101172047473" modified="20180316115618571" tags="[[חיות אוכל]] ארוחות" title="כריסמס 2017">
 <pre>[img[pictures/christmas-2017.jpg]]
 
 !!![[גורה]]:
 
-לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב [[אצלנו|כוכב המשאלות 01]] את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה פטה כבד ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, [[חמאת שום|חמאת שום ועשבי תיבול]], [[פטה טבעוני]], אורז לבן, כרובית בטורטיות, [[תבשיל ירקות]], סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
+לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב [[אצלנו|כוכב המשאלות 01]] את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה [[פטה כבד|פטה כבד עוף]] ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, [[חמאת שום|חמאת שום ועשבי תיבול]], [[פטה טבעוני]], [[אורז לבן|אורז לבן עם צנוברים]], כרובית בטורטיות, [[תבשיל ירקות]], סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
 
-זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], [[יויו]] סיפר לנו שהתרחשה [[תהפוכת]], והוא [[ואנג'ליק|אנג'ליק]] התאחדו. כולנו שמחנו למרות שכולנו די כבר שמנו לב.</pre>
+זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], [[יויו]] סיפר לנו שהתרחשה [[תהפוכת]], והוא [[ואנג'ליק|אנג'ליק]] התאחדו. כולנו שמחנו מאד והודנו שכולנו די כבר שמנו לב.</pre>
 </div>
 <div created="20170512222504639" modified="20170514232358882" tags="פעם" title="כשאמרו קסטה">
 <pre>''
@@ -13033,7 +13037,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
-<div created="20171219223133813" modified="20180125165750277" tags="[[מטא בדיון]]" title="לילי">
+<div created="20171219223133813" modified="20180316115840791" tags="[[מטא בדיון]] [[ילדים חד הוריים]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
 
@@ -13743,10 +13747,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
 </div>
-<div created="20180202172446720" modified="20180213183143606" tags="אמהות [[אחות כהן]]" title="נולדנו">
+<div created="20180202172446720" modified="20180316181547400" tags="אמהות [[אחות כהן]] הצוות" title="נולדנו">
 <pre>[img[pictures/noladnu.jpg]]
 
-!!![[גורה]]:
 
 [[נולדנו|https://www.youtube.com/watch?v=Or-dVWZzS7Q]] כולנו [[כאן|גלות]] בין 1955 ל-2000.
 ארבעה מאיתנו שייכים לדור הבייבי בום, חמישה לדור ה-X, יותר ממחצית לדור ה-Y ו 3 לדור ה-Z. פיליפ הוא המבוגר ביותר וראשל היא בתנו הקטנה.</pre>
@@ -15072,6 +15075,36 @@ __אופן ההכנה____
 
 
 4. מרפדים תבנית אינגליש קייק בניילון נצמד, יוצקים לתוכה את המשחה, וממשיכים לעטוף היטב עם הניילון הנצמד. מאפסנים במקרר לכמה שעות (6-8) עד להגשה.</pre>
+</div>
+<div created="20180316115628327" modified="20180316132357556" tags="הצוות [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]]" title="פטה כבד עוף">
+<pre>[img[pictures/pate-kaved.jpg]]
+
+החומרים:
+
+1. 200 גרם חמאה
+
+2. 1 ק&quot;ג כבד עוף נקי
+
+3. 2 בצלים בינוניים-גדולים חתוכים
+
+4. רבע כוס יין אדום מתוק או ברנדי או יגר מייסטר וכו'
+
+5. מלח ים גס ופלפל שחור גרוס
+
+אופן ההכנה:
+
+1. צולים את הכבדים במחבת כבדה עם מעט מהחמאה עד שהם מוכנים, מניחים בקערה ומעליהם 50 גרם חמאה
+
+2. מוסיפים עוד מעט חמאה למחבת, מזהיבים את הבצלים ומוציאים אותם אל קערת הכבדים
+
+3. מוסיפים למחבת את שארית החמאה עד שהיא נמסה ומוזגים אותה מעל הכבדים והבצל
+
+4. מוסיפים לקערה את האלכוהול
+
+5. טוחנים הכל במעבד מזון עם מעט מלח ופלפל - טועמים ומתקנים אם צריך
+
+6. את משחת הכבד מוזגים לכלי הגשה או לתוך תבנית אנגליש מרופדת בניילון נצמד, אוטמים ומניחים במקרר ל 6 שעות לפחות.
+</pre>
 </div>
 <div created="20170401151233604" modified="20170528151211923" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
