--- a/index.html
+++ b/index.html
@@ -8900,7 +8900,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="הצוות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8920,7 +8920,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180316181821217" title="$:/temp/search">
+<div created="20161023184814872" modified="20180316203157289" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11822,10 +11822,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20180315162507739" modified="20180316153634441" tags="[[אחות כהן]]" title="הצוות">
+<div created="20180315162507739" modified="20180316204556215" tags="[[אחות כהן]]" title="הצוות">
 <pre>[img[pictures/hazevet.jpg]]
 
-הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]] מחודשת החוזה שכירות, כלומר [[יויו]], [[אירי]] [[וגורה|גורה]], שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
+הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]] מחודשת חוזה השכירות, כלומר [[יויו]], [[אירי]] [[וגורה|גורה]], שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
 
 
 &lt;&lt;list-links filter:&quot;[tag[הצוות]]&quot;&gt;&gt;
@@ -13093,13 +13093,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 את הטיסה קבעתי לשעות הבוקר, כך שבשעה בה אני אמורה לסיים את הלימודים כבר אהיה עם אדל. קבעתי עם נהג מונית אתו הסתמסתי כמה ימים קודם – בשם אמי, שבשמה גם כתבתי פתק שנועד לו ופתק אותו ייתן הנהג [[לנטע|נטע]].
 </pre>
 </div>
-<div created="20180126141443234" modified="20180128180747814" tags="לילי" title="לילי 08">
+<div created="20180126141443234" modified="20180316203703720" tags="לילי" title="לילי 08">
 <pre>[img[pictures/lily-8.jpg]]
 בשדה התעופה פגשנו את [[נטע]], אישה נחמדה, שהכרתי דרך אתר להורים שמחפשים מלווה טיסות לילדים. גם לה כתבתי בשם הורי העסוקים. נהג המונית נתן לה את הפתק בו היה כתוב:
 
 נטע שלום רב,
 לא הספקנו להמיר כסף, נודה לך אם תוכלי לעשות זאת עבורנו
-וכן מודים לך על הכל, נסיעה טובה. אנו בטוחים כי תמצאי את לילי שלנו ילדה אחראית ונוחה.
+וכן מודים לך על הכל, נסיעה טובה. אנו בטוחים כי תמצאי את לילי שלנו ילדה אחראית ונוחה. 
 </pre>
 </div>
 <div created="20180126160253354" modified="20180126160354529" tags="לילי" title="לילי 09">
