--- a/index.html
+++ b/index.html
@@ -8900,7 +8900,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הצוות [[האחיות כהן]]" title="$:/StoryList">
+<div list="לילי [[פטה כבד עוף]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13037,7 +13037,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
-<div created="20171219223133813" modified="20180316115840791" tags="[[מטא בדיון]] [[ילדים חד הוריים]]" title="לילי">
+<div created="20171219223133813" modified="20180318170818076" tags="[[מטא בדיון]] [[ילדים חד הוריים]] [[סיפורים אמיתיים]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
 
