--- a/index.html
+++ b/index.html
@@ -8900,7 +8900,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לילי [[פטה כבד עוף]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אווה מספרת 04]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8920,7 +8920,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180316203157289" title="$:/temp/search">
+<div created="20161023184814872" modified="20180322190120662" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9495,7 +9495,7 @@ well,
 
 </pre>
 </div>
-<div created="20170723140525046" modified="20170725141639786" tags="[[הסיפור על גורה]]" title="אווה מספרת 04">
+<div created="20170723140525046" modified="20180322190249452" tags="[[הסיפור על גורה]]" title="אווה מספרת 04">
 <pre>[img[pictures/hasipoor-4.jpg]]
 
 
@@ -9507,7 +9507,8 @@ well,
 יויו.
 
 
-יומיים אחרי ששלח את המכתב על אודות פציעתה של גורה, הוא צלצל וסיפר לי את מה שאלפרד סיפר לו. הם נסעו ליער וטעו בשביל. אלפרד החנה לרגע את המכונית קרוב לקצה היער באזור גבוה. היא התרגזה עליו על כך שהתבלבל. הוא ניסה להרגיע אותה וגלגל להם עוד ג'וינט מהחומר החזק. הוא אמר לה שתכף יראה איך הם יוצאים משם, וככל שעברו הדקות, כך סיפר אלפרד המסכן, היא הלכה והתחרפנה. אלפרד לא ידע מה לעשות. הוא חשב שזה היה התקף חרדה. היא רבה איתו וצעקה עליו שתקע אותה ביער המטומבל הזה באמצע הלילה ושעכשיו הם ילכו לאיבוד. הוא ניסה להרגיע אותה. ברגע מסוים היא יצאה מהאוטו ורצה. היא החליקה והתגלגלה במורד סלעי ותלול. אלפרד רץ אחריה. הוא הצליח להגיע אליה רק אחרי רבע שעה בערך, לא היה לו טלפון נייד. הוא טיפס בחזרה ולמזלו עברו שם בחור ושתי בחורות עם רכב ארבע על ארבע וטלפון נייד. הוא צלצל מיד לאמבולנס. האמבולנס הגיע כעבור רבע שעה נוספת, התברר שהם בכלל לא היו כל כך רחוקים בתוך היער. זה היה יער מתויר, עם שבילים מסומנים. הם נסעו עם האמבולנס לבית החולים הקרוב ביותר, שהיה ממוקם בפאתי פריז. יויו עדיין לא ידע דבר. לאלפרד לא היה את מספר הטלפון שלו. והוא לא ידע מה לעשות קודם. בבית החולים חיברו את גורה להרבה מכשירים. אלפרד הצליח להשיג את מספר הטלפון של הבית של גורה מאחד החבר'ה מבית הספר. התאונה אירעה קצת לפני אחת עשרה בלילה. היא הובהלה לבית החולים ושם לטיפול נמרץ. בדיקת סי-טי הראתה כי גורה נחבלה ברקמת המוח. גם נשברו לה עצמות בבית החזה ובאגן. ההורים של יויו ירדו עליו רצח אחרי שזה קרה. אבא של אלפרד סידר לגורה בית חולים פרטי בתוך העיר. זה כל מה שיויו סיפר לי בטלפון. הוא היה שבור. הוא גם לא שכח לספר לי שהשאיר למישל הודעה אצל הברמן ובה מספר הטלפון שלו וכמה מילים על מה שקרה. במהלך השבועיים הללו השארתי לו כמה הודעות במשיבון. קיבלתי ממנו מכתב אחד קצרצר ובו הוא אמר שידבר איתי ברגע שיוכל. בינתיים זינאדין זידאן זיין לעצמו את הצורה בגמר של המונדיאל, אבא של איתן נפטר וגם סבא של מרווה, ובצפון הארץ יש מלחמה שכולנו מקווים שהיא תיגמר בקרוב. 
+יומיים אחרי ששלח את המכתב על אודות פציעתה של גורה, הוא צלצל וסיפר לי את מה שאלפרד סיפר לו. הם נסעו ליער וטעו בשביל. אלפרד החנה לרגע את המכונית קרוב לקצה היער באזור גבוה. היא התרגזה עליו על כך שהתבלבל. הוא ניסה להרגיע אותה וגלגל להם עוד ג'וינט מהחומר החזק. הוא אמר לה שתכף יראה איך הם יוצאים משם, וככל שעברו הדקות, כך סיפר אלפרד המסכן, היא הלכה והתחרפנה. אלפרד לא ידע מה לעשות. הוא חשב שזה היה התקף חרדה. היא רבה איתו וצעקה עליו שתקע אותה ביער המטומבל הזה באמצע הלילה ושעכשיו הם ילכו לאיבוד. הוא ניסה להרגיע אותה. ברגע מסוים היא יצאה מהאוטו ורצה. היא החליקה והתגלגלה במורד סלעי ותלול. אלפרד רץ אחריה. הוא הצליח להגיע אליה רק אחרי רבע שעה בערך, לא היה לו טלפון נייד. הוא טיפס בחזרה ולמזלו עברו שם בחור ושתי בחורות עם רכב ארבע על ארבע וטלפון נייד. הוא צלצל מיד לאמבולנס. האמבולנס הגיע כעבור רבע שעה נוספת, התברר שהם בכלל לא היו כל כך רחוקים בתוך היער. זה היה יער מתויר, עם שבילים מסומנים. הם נסעו עם האמבולנס לבית החולים הקרוב ביותר, שהיה ממוקם בפאתי פריז. יויו עדיין לא ידע דבר. לאלפרד לא היה את מספר הטלפון שלו. והוא לא ידע מה לעשות קודם. בבית החולים חיברו את גורה להרבה מכשירים. אלפרד הצליח להשיג את מספר הטלפון של הבית של גורה מאחד החבר'ה מבית הספר. התאונה אירעה קצת לפני אחת עשרה בלילה. היא הובהלה לבית החולים ושם לטיפול נמרץ. בדיקת סי-טי הראתה כי גורה נחבלה ברקמת המוח. גם נשברו לה עצמות בבית החזה ובאגן. ההורים של יויו ירדו עליו רצח אחרי שזה קרה. אבא של אלפרד סידר לגורה בית חולים פרטי בתוך העיר. זה כל מה שיויו סיפר לי בטלפון. הוא היה שבור. הוא גם לא שכח לספר לי שהשאיר למישל הודעה אצל הברמן ובה מספר הטלפון שלו וכמה מילים על מה שקרה.
+
 גורה הייתה מחוסרת הכרה קצת פחות משבועיים. במשך הזמן הזה יויו ואלפרד לא משו ממיטתה. יויו הלך והתאהב באיש שקיבל אחריות מלאה למה שקרה. ביום שבו התעוררה גורה מהתרדמת בה הייתה, זו בעצם הייתה תרדמת, חוסר הכרה זה היה, הוא התקשר אליי לספר לי על כך. הוא שמח היה כולו מאושר. &quot;הגורה פקחה את עיניה&quot;, אמר נרגש. לאחר התעוררותה ציפתה לגורה תקופת החלמה לא פשוטה. השברים עדיין לא התאחו לגמרי, האזורים שנפגעו היו רגישים, באגן הכניסו לה פלטינה, גופה דאב ולא תמיד הגיב לפקודות שנתנה לו.
 כחודש אחר כך הגיע אליי מייל מיויו:
 אווה אווה אווה,
