--- a/index.html
+++ b/index.html
@@ -611,6 +611,8 @@ Error message and password prompt
 
 <li>יויו וגורה</li>
 
+<li>יונתן גפן</li>
+
 <li>ילדים חד הוריים</li>
 
 <li>ים טתיס</li>
@@ -980,6 +982,8 @@ Error message and password prompt
 <li>קפה מילר</li>
 
 <li>קפיץ ספירלי</li>
+
+<li>קראסט תפוחים</li>
 
 <li>קרן</li>
 
@@ -8888,10 +8892,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180316181342104" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20180325140333624" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180316181824179" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180325141939488" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8900,7 +8904,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אווה מספרת 04]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[יונתן גפן]] [[קראסט תפוחים]] אנג'ליק [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8920,7 +8924,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180322190120662" title="$:/temp/search">
+<div created="20161023184814872" modified="20180325141858810" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9935,12 +9939,12 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אמהות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161115215016493" modified="20170806224224301" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20180324133828326" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
 
-אנג'ליק היא הג'ינג'ית היפה וירוקת העיניים שהגיעה אלינו עם [[אלפרד]] [[לארוחת הכריסמס|ארוחת כריסמס]]. הם הכירו בקורס ל[[כירולוגיה פסיכודיאגנוסטית]].
+אנג'ליק היא הג'ינג'ית היפה וירוקת העיניים שהגיעה אלינו עם [[אלפרד]] [[לארוחת הכריסמס|ארוחת כריסמס]]. שניהם [[ודניאל|דניאל]] הכירו בקורס ל[[כירולוגיה פסיכודיאגנוסטית]].
 
 היא עדינה מאד [[ורגישה|הולכת על חבל]], אבל גם ראיתי אותה מתעצבנת. היא מטפלת בתנועה, היא בת 32 ויש לה אבא, [[אימא|אימא מהאגדות]], ושתי אחיות.
 
@@ -12227,6 +12231,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20180325134055236" modified="20180325141925276" tags="[[אחיות חוץ]] מוזיקה" title="יונתן גפן">
+<pre>
+[img[pictures/yonatan-gefen.jpg]]
+
+!!![[יויו]]:
+
+[[זו|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]] התמונה ממנה גורה ציירה את [[יונתן גפן|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A0%D7%AA%D7%9F_%D7%92%D7%A4%D7%9F]] - האומן שהשפיע עלי כ&quot;כ.
+
+אולי [[הכבש השישה עשר|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]]  הוא [[הביג לבובסקי|ביג לבובסקי]] שלו מהבחינה שגם לפני וגם אחרי [[הם|איתן וג'ואל כהן]] תמיד עושים סרטים נפלאים עם X-פקטור יחודי, ובכל זאת בכבש השישה עשר קרה משהו חד פעמי שנגע בכולם. לבי על האחים כהן שלא גדלו על יונתן גפן.</pre>
 </div>
 <div created="20170610184436279" modified="20170817155958322" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
 <pre>[img[pictures/yeladim-chad.jpg]]
@@ -15507,6 +15521,34 @@ Fapina''
 
 
 </pre>
+</div>
+<div created="20180324124658340" modified="20180324131006762" tags="הצוות [[חיות אוכל]]" title="קראסט תפוחים">
+<pre>
+[img[pictures/apple-crust.jpg]]
+
+קראסט כזה אנחנו מכינים כשנשארים לנו תפוחים שאין סיכוי שכבר נאכל וזה לא שהם רקובים כי אם לכל היותר מעט מוכתמים. את כתמי הבשלות מסירים כמובן כשמקלפים. זה מאפה שמומלץ לאכול כחצי שעה אחרי שיצא (לבד) מן התנור.
+
+אם להתחפש לז'נבייב לרגע, שמזיעה מדיבורים כאלה, נגיד שהכנו קראסט תפוחים של תפוחים וקראסט תפוחים של אגסים (כי נשארו לנו שלושה מאלה ושלושה מאלה).
+
+ובכן:
+
+1. קולפים תפוחים או אגסים, חותכים לפרוסות או קוביות, ומערבבים אותם עם כפית סוכר, 2 כפיות מיץ לימון וחצי כפית קינמון.
+
+2. מערבבים בקערה כוס קמח לבן, כוס סולת, שקיק סוכר וניל, חצי כוס סוכר
+
+3. לתוכם גוררים על פומפיה 200 גרם חמאה
+
+4. מחברים עם האצבעות לכדי גוש אחיד
+
+5. חצי ממנו משטחים בתבנית (במקרה שלנו שתי תבניות קטנות)
+
+6. מפזרים את התפוחים/אגסים החתוכים
+
+7. מפזרים מעל גושים משאר הבצק
+
+8. אופים בחום בינוני נמוך 40 דקות עד שעה (תלוי בתנור)
+
+6. </pre>
 </div>
 <div created="20170401220808061" modified="20170608171028060" tags="[[משפחת באומן]]" title="קרן">
 <pre>[img[pictures/keren.jpg]]
