--- a/index.html
+++ b/index.html
@@ -607,11 +607,11 @@ Error message and password prompt
 
 <li>יה</li>
 
+<li>יהונתן גפן</li>
+
 <li>יויו</li>
 
 <li>יויו וגורה</li>
-
-<li>יונתן גפן</li>
 
 <li>ילדים חד הוריים</li>
 
@@ -8904,7 +8904,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[יונתן גפן]] [[קראסט תפוחים]] אנג'ליק [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[יהונתן גפן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12195,6 +12195,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התחברנו ממש, והיא אחות.</pre>
 </div>
+<div created="20180325134055236" modified="20180325154739864" tags="[[אחיות חוץ]] מוזיקה" title="יהונתן גפן">
+<pre>[img[pictures/yonatan-gefen.jpg]]
+
+!!![[יויו]]:
+
+[[זו|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]] התמונה ממנה גורה ציירה את [[יהונתן גפן|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A0%D7%AA%D7%9F_%D7%92%D7%A4%D7%9F]] - האומן שהשפיע עלי כ&quot;כ.
+
+אולי [[הכבש השישה עשר|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]]  הוא [[הביג לבובסקי|ביג לבובסקי]] שלו מהבחינה שגם לפני וגם אחרי [[הם|איתן וג'ואל כהן]] תמיד עושים סרטים נפלאים עם X-פקטור יחודי, ובכל זאת בכבש השישה עשר קרה משהו חד פעמי שנגע בכולם. לבי על האחים כהן שלא גדלו על יונתן גפן.</pre>
+</div>
 <div created="20161026214908307" modified="20170720150544591" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] [[אירי טוענת]]" title="יויו">
 <pre>!!![[אירי]]:
 
@@ -12231,16 +12240,6 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
-</div>
-<div created="20180325134055236" modified="20180325141925276" tags="[[אחיות חוץ]] מוזיקה" title="יונתן גפן">
-<pre>
-[img[pictures/yonatan-gefen.jpg]]
-
-!!![[יויו]]:
-
-[[זו|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]] התמונה ממנה גורה ציירה את [[יונתן גפן|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A0%D7%AA%D7%9F_%D7%92%D7%A4%D7%9F]] - האומן שהשפיע עלי כ&quot;כ.
-
-אולי [[הכבש השישה עשר|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]]  הוא [[הביג לבובסקי|ביג לבובסקי]] שלו מהבחינה שגם לפני וגם אחרי [[הם|איתן וג'ואל כהן]] תמיד עושים סרטים נפלאים עם X-פקטור יחודי, ובכל זאת בכבש השישה עשר קרה משהו חד פעמי שנגע בכולם. לבי על האחים כהן שלא גדלו על יונתן גפן.</pre>
 </div>
 <div created="20170610184436279" modified="20170817155958322" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
 <pre>[img[pictures/yeladim-chad.jpg]]
@@ -15523,8 +15522,7 @@ Fapina''
 </pre>
 </div>
 <div created="20180324124658340" modified="20180324131006762" tags="הצוות [[חיות אוכל]]" title="קראסט תפוחים">
-<pre>
-[img[pictures/apple-crust.jpg]]
+<pre>[img[pictures/apple-crust.jpg]]
 
 קראסט כזה אנחנו מכינים כשנשארים לנו תפוחים שאין סיכוי שכבר נאכל וזה לא שהם רקובים כי אם לכל היותר מעט מוכתמים. את כתמי הבשלות מסירים כמובן כשמקלפים. זה מאפה שמומלץ לאכול כחצי שעה אחרי שיצא (לבד) מן התנור.
 
