--- a/index.html
+++ b/index.html
@@ -12204,12 +12204,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התחברנו ממש, והיא אחות.</pre>
 </div>
-<div created="20180325134055236" modified="20180325210205620" tags="[[אחיות חוץ]] מוזיקה" title="יהונתן גפן">
+<div created="20180325134055236" modified="20180325210440788" tags="[[אחיות חוץ]] מוזיקה" title="יהונתן גפן">
 <pre>[img[pictures/yonatan-gefen.jpg]]
 
 !!![[יויו]]:
 
-[[זו|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]] התמונה ממנה גורה ציירה את [[יהונתן גפן|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A0%D7%AA%D7%9F_%D7%92%D7%A4%D7%9F]] - האומן שהשפיע עלי כ&quot;כ.
+[[זו|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]] התמונה ממנה גורה ציירה את [[יהונתן גפן|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A0%D7%AA%D7%9F_%D7%92%D7%A4%D7%9F]] - האומן שהשפיע עלי כ&quot;כ. שירים שענת אוהבת במיוחד, סיפורים שענת אוהבת במיוחד, הכוכבים הם הילדים של הירח, שיני חלב. אימא יקרה. איך שיר נולד. דון קישוט אתה יכול לנוח. ספר שלם על חתול אחד. ועוד המון בהמונים. כי בלי הדובון והעוזי - לא ידעו שהוא דרוזי.
 
 אולי [[הכבש השישה עשר|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]]  הוא [[הביג לבובסקי|ביג לבובסקי]] שלו מהבחינה שגם לפני וגם אחרי [[הם|איתן וג'ואל כהן]] תמיד עושים סרטים נפלאים עם X-פקטור יחודי, ובכל זאת בכבש השישה עשר קרה משהו חד פעמי שנגע בכולם. לבי על האחים כהן שלא גדלו על יונתן גפן, האיש האומר.
 
