--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -10200,12 +10200,12 @@ well,
 
 </pre>
 </div>
-<div created="20171212171900725" modified="20180227132225898" title="ביג לבובסקי">
+<div created="20171212171900725" modified="20180325212927214" title="ביג לבובסקי">
 <pre>[img[pictures/the-big-lebowski.jpg]]
 
 !!![[יויו]]:
 
-אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] do מבחינתי הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים לפזר את האפר שלו.
+אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] הוא מבחינתי הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים לפזר את האפר שלו.
 </pre>
 </div>
 <div created="20170623150317093" modified="20180208153618091" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
@@ -12204,14 +12204,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התחברנו ממש, והיא אחות.</pre>
 </div>
-<div created="20180325134055236" modified="20180325211913024" tags="[[אחיות חוץ]] מוזיקה" title="יהונתן גפן">
+<div created="20180325134055236" modified="20180325212700894" tags="[[אחיות חוץ]] מוזיקה" title="יהונתן גפן">
 <pre>[img[pictures/yonatan-gefen.jpg]]
 
 !!![[יויו]]:
 
-[[זו|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]] התמונה ממנה גורה ציירה את [[יהונתן גפן|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A0%D7%AA%D7%9F_%D7%92%D7%A4%D7%9F]] - האומן שהשפיע עלי כ&quot;כ. שירים שענת אוהבת במיוחד, סיפורים שענת אוהבת במיוחד, הכוכבים הם הילדים של הירח, שיני חלב. אימא יקרה. איך שיר נולד. לוקח ת'זמן. שיחות סלון. [[דון קישוט אתה יכול לנוח, יש כל כך הרבה תחנות רוח|https://www.youtube.com/watch?v=Z1OPyecbGCI]]. ספר שלם על חתול אחד. ועוד המון בהמונים. כי בלי הדובון והעוזי - לא ידעו שהוא דרוזי.
+[[זו|https://img.wcdn.co.il/f_auto,w_700/1/9/5/4/1954147-46.jpg]] התמונה ממנה גורה ציירה את [[יהונתן גפן|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A0%D7%AA%D7%9F_%D7%92%D7%A4%D7%9F]] - האומן שהשפיע עלי כ&quot;כ. שירים שענת אוהבת במיוחד, סיפורים שענת אוהבת במיוחד, הכוכבים הם הילדים של הירח, שיני חלב. אימא יקרה. איך שיר נולד. לוקח ת'זמן. שיחות סלון. [[דון קישוט אתה יכול לנוח|https://www.youtube.com/watch?v=Z1OPyecbGCI]]. ספר שלם על חתול אחד. ועוד המון בהמונים. כי בלי הדובון והעוזי - לא ידעו שהוא דרוזי.
 
-אולי [[הכבש השישה עשר|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]]  הוא [[הביג לבובסקי|ביג לבובסקי]] שלו מהבחינה שגם לפני וגם אחרי [[הם|איתן וג'ואל כהן]] תמיד עושים סרטים נפלאים עם X-פקטור יחודי, ובכל זאת// בכבש השישה עשר// קרה משהו חד פעמי שנגע בכולם. לבי על האחים כהן שלא גדלו על יונתן גפן, האיש האומר.
+אולי [[הכבש השישה עשר|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]]  הוא [[הביג לבובסקי|ביג לבובסקי]] שלו מהבחינה שגם לפני וגם אחרי [[הם|איתן וג'ואל כהן]] תמיד עושים סרטים נפלאים עם X-פקטור יחודי, ובכל זאת// בכבש השישה עשר// קרה משהו חד פעמי שנגע בכולם. לבי על האחים כהן שלא גדלו על יהונתן גפן, [[האיש האומר|https://www.youtube.com/watch?v=CJmMpc0lo1c]].
 
 [[וזה בכל בינתיים|https://www.youtube.com/watch?v=ixl8xKyv-8E&amp;index=3&amp;list=PLXhoL6TJUCjYLAo1mw50eUrj5JrdEEoqC]] (בינתיים זה הכל)</pre>
 </div>
