--- a/index.html
+++ b/index.html
@@ -8913,7 +8913,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[יהונתן גפן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[יהונתן גפן]] [[ביג לבובסקי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10200,12 +10200,12 @@ well,
 
 </pre>
 </div>
-<div created="20171212171900725" modified="20180227132225898" title="ביג לבובסקי">
+<div created="20171212171900725" modified="20180325215306980" title="ביג לבובסקי">
 <pre>[img[pictures/the-big-lebowski.jpg]]
 
 !!![[יויו]]:
 
-אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] do מבחינתי הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים לפזר את האפר שלו.
+אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים לפזר את האפר שלו.
 </pre>
 </div>
 <div created="20170623150317093" modified="20180208153618091" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
