--- a/index.html
+++ b/index.html
@@ -8913,7 +8913,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[יהונתן גפן]] [[יוני רכטר]] [[שלום חנוך]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[יהונתן גפן]] [[שלום חנוך]] [[יוני רכטר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12204,7 +12204,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התחברנו ממש, והיא אחות.</pre>
 </div>
-<div created="20180325134055236" modified="20180325214837970" tags="[[אחיות חוץ]] מוזיקה" title="יהונתן גפן">
+<div created="20180325134055236" modified="20180326104222630" tags="[[אחיות חוץ]] מוזיקה" title="יהונתן גפן">
 <pre>[img[pictures/yonatan-gefen.jpg]]
 
 !!![[יויו]]:
@@ -12213,7 +12213,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אולי [[הכבש השישה עשר|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%91%D7%A9_%D7%94%D7%A9%D7%99%D7%A9%D7%94_%D7%A2%D7%A9%D7%A8]]  הוא [[הביג לבובסקי|ביג לבובסקי]] שלו מהבחינה שגם לפני וגם אחרי [[הם|איתן וג'ואל כהן]] תמיד עושים סרטים נפלאים עם X-פקטור יחודי, ובכל זאת בכבש השישה עשר קרה משהו חד פעמי שנגע בכולם. לבי על האחים כהן שלא גדלו על יהונתן גפן, [[האיש האומר|https://www.youtube.com/watch?v=CJmMpc0lo1c]].
 
-[[וזה בכל בינתיים|https://www.youtube.com/watch?v=ixl8xKyv-8E&amp;index=3&amp;list=PLXhoL6TJUCjYLAo1mw50eUrj5JrdEEoqC]] (בינתיים זה הכל)</pre>
+[[וזה הכל בינתיים|https://www.youtube.com/watch?v=ixl8xKyv-8E&amp;index=3&amp;list=PLXhoL6TJUCjYLAo1mw50eUrj5JrdEEoqC]] (בינתיים זה הכל)</pre>
 </div>
 <div created="20161026214908307" modified="20170720150544591" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] [[אירי טוענת]]" title="יויו">
 <pre>!!![[אירי]]:
@@ -15982,12 +15982,12 @@ Fapina''
 הוא טוב מראה, טוב לב, חביב על הבריות, חסר חוש עסקי, בעל חוש אומנותי ואף יוצר בעצמו, חובב נשים (אך לא רודף שמלות).
 שלום גר בקומה חמש בבניין, ובקומה מעליו הוא חולק סטודיו עם מסאז'יסטית ואומנית נוספת.</pre>
 </div>
-<div created="20180325202247142" modified="20180325221100986" tags="[[אחיות חוץ]] מוזיקה" title="שלום חנוך">
+<div created="20180325202247142" modified="20180326104109106" tags="[[אחיות חוץ]] מוזיקה" title="שלום חנוך">
 <pre>[img[pictures/shalom-chanoch.jpg]]
 
 !!![[יויו]]:
 
-[[מכאן|https://www.ynet.co.il/PicServer2/24012010/2389758/_DSC0020_wa.jpg]] גורה לקחה את [[שלום חנוך|https://he.wikipedia.org/wiki/%D7%A9%D7%9C%D7%95%D7%9D_%D7%97%D7%A0%D7%95%D7%9A]] שהוא מילים ומנגינה.
+[[מכאן|https://www.ynet.co.il/PicServer2/24012010/2389758/_DSC0020_wa.jpg]] גורה לקחה את [[הבונבונייר|https://he.wikipedia.org/wiki/%D7%A9%D7%9C%D7%95%D7%9D_%D7%97%D7%A0%D7%95%D7%9A]]  שמחבר מילים ומנגינות יפות כבר שנים ארוכות.
 
 [[כי שירי הוא עלה ברוח|https://www.youtube.com/watch?v=0QhM-_h3Yg8]]. 
 
