--- a/index.html
+++ b/index.html
@@ -8919,7 +8919,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ברי סחרוף]] jazz [[פלא אוזן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פלא אוזן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15226,12 +15226,12 @@ __אופן ההכנה____
 [[וזה|https://www.youtube.com/watch?v=WZd2SkydIXA]] מופע שיויו וגורה השתמשו בשמו [[ב-HH|HH]] בזמנו - [[קפה מילר]], כמחווה לרקדנית והכוריאוגרפית החשובה, פינה ז&quot;ל.
 </pre>
 </div>
-<div created="20180408155155270" modified="20180408172317648" tags="[[אחיות חוץ]] מוזיקה" title="פלא אוזן">
+<div created="20180408155155270" modified="20180408180604856" tags="[[אחיות חוץ]] מוזיקה" title="פלא אוזן">
 <pre>[img[pictures/pele-ozen.jpg]]
 
 !!![[הצוות]]:
 
-[[נפלאים|http://coensisters.org/pictures/pele-ozen-beit-alpha.jpg]] ששרים על הסקייט והמייק חזק וברור. [[שלא נרדם כולנו|https://www.youtube.com/watch?v=HxdcYPaNIX0]] בשמירה על האחרים ועל [[עצמינו|על הספקטרום]]. [[בביט וכיף של גרוב|https://www.youtube.com/watch?v=9OlAf4fCv0Q]] לטייל איתם וללמוד שאפשר [[שיהיה לנו כבר טוב|https://www.youtube.com/watch?v=WPwFRyCuWpI]]. אנחנו [[כאן בדירה|הצוות]] התאהבנו בהם. 
+[[נפלאים|http://coensisters.org/pictures/pele-ozen-beit-alpha.jpg]] ששרים על הסקייט והמייק חזק וברור. [[שלא נרדם כולנו|https://www.youtube.com/watch?v=HxdcYPaNIX0]] בשמירה על האחרים ועל [[עצמנו|על הספקטרום]]. [[בביט וכיף של גרוב|https://www.youtube.com/watch?v=9OlAf4fCv0Q]] לטייל איתם וללמוד שאפשר [[שיהיה לנו כבר טוב|https://www.youtube.com/watch?v=WPwFRyCuWpI]]. אנחנו [[כאן בדירה|הצוות]] התאהבנו בהם. 
 
 
 [[כי את האור להפיץ זה לא פשע|https://www.youtube.com/watch?v=Z2mJLm8aUiI]]
