--- a/index.html
+++ b/index.html
@@ -777,6 +777,8 @@ Error message and password prompt
 
 <li>מג'דרה</li>
 
+<li>מגבות מטבח</li>
+
 <li>מדו</li>
 
 <li>מה שבאמת קרה בארוחת כריסמס</li>
@@ -8907,10 +8909,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180325140333624" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180410152620112" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180408163604916" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180410152846480" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8919,7 +8921,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[יוני רכטר]] [[חוה אלברשטיין]] [[פלא אוזן]] [[אנט ג'מיימה]] [[מצפה ראשית]] מיצפרש [[לצייר גרפיטי וירטואלי במִיצְפֶּרֶש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מגבות מטבח]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8939,7 +8941,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180408163434042" title="$:/temp/search">
+<div created="20161023184814872" modified="20180410113429592" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10425,7 +10427,7 @@ Is where I want to be
 כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
 </pre>
 </div>
-<div created="20170619141108783" modified="20180130192646571" tags="[[סיפורים אמיתיים]] אמהות" title="גואן אופנה">
+<div created="20170619141108783" modified="20180410113509750" tags="[[סיפורים אמיתיים]] אמהות" title="גואן אופנה">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
 
 !!![[גואן יין]]:
@@ -10442,7 +10444,7 @@ Is where I want to be
 
 אמי מנהלת את העבודה. אנחנו גוזרות יחדיו, ומעסיקות שלוש נשים. 
 
-הפסקתי לגור איתה רק לפני כמה שנים. לא קל לה עם זה שאני עדיין לא נשואה, ושעדיין אין לי ילדים, אבל הסברתי לה, שהחיים לא קלים.
+הפסקתי לגור איתה רק לפני כמה שנים. לא קל לה עם זה שאני עדיין לא נשואה, ושעדיין אין לי ילדים, אבל הסברתי לה, [[שהחיים לא קלים|החיים נועדו למי שלא יכול להתמודד עם סמים]].
 
 </pre>
 </div>
@@ -13351,6 +13353,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 4. מסננים את העדשים, מערבבים אותם לתוך האורז, ממליחים לפי הטעם, ומפזרים מעל את הבצל המטוגן.
 
 </pre>
+</div>
+<div created="20180410150429522" modified="20180410152844192" tags="[[הנחלה בה גדלתי]] [[חיות אוכל]] [[כשהם ישנים]] [[מטא בדיון]]" title="מגבות מטבח">
+<pre>[img[pictures/magavot-mitbach.jpg]]
+
+!!![[אווה]]:
+
+למזלי הרב [[אבי|אבינו]] סחב איתו כל הדרך מהנחלה את קופסת העץ הזאת - אותה הכין סבי [[לאימי|חנה אמנו]] לפני שנים רבות. היא עומדת על המיקרו ובתוכה ערימת מגבות מטבח שעולה ויורדת כל הזמן.</pre>
 </div>
 <div created="20170926191733045" modified="20171002140653886" tags="הסופרנוס" title="מדו">
 <pre>[img[pictures/meadow-soprano.jpg]]
